force-app/main/http_callout/objects/Google_Maps_Integration__c/Google_Maps_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google Maps Integration</label>
</CustomObject>