force-app/main/http_callout/objects/Google_Maps_Integration__c/fields/Address_Geocoding_Enabled_In_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Address_Geocoding_Enabled_In_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Geocoding Enabled In Sandbox</label>
    <type>Checkbox</type>
</CustomField>