force-app/main/http_callout/objects/Google_Maps_Integration__c/fields/Geocoding_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Access_Key__c</fullName>
    <label>Geocoding Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>